src/test/compile-fail/issue-3099-b.rs
#[legacy_exports]
mod a {}

#[legacy_exports]
mod a {} //~ ERROR duplicate definition of type a

fn main() {}
